2011-03-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix bug (comments-in-var-defn.test + autoconf 2.62)
	* tests/comments-in-var-defn.test: The configure.in stub created
	by default, which has the AC_INIT first argument obtained by the
	test name, causes autoconf 2.62 to fail with a spurious error
	message like: "configure.in:1: error: defn: undefined macro:".
	Thus, to prevent this, the test is renamed to ...
	* tests/comments-in-var-def.test: ... this.
	* tests/Makefile.am (TESTS): Updated.

2011-03-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	cosmetics: convert encoding from ISO-8859 to UTF-8
	* ChangeLog.03: Convert encoding to UTF-8.
	* ChangeLog.96: Likewise.
	* ChangeLog.98: Likewise.
	* NEWS: Likewise.
	* TODO: Likewise.

2011-03-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: extend checks on the 'unindent' shell function
	* tests/self-check-unindent.test: Also check that multiple
	instances of 'unindent'	can run in parallel (this was not
	the case when that function used temporary files).

2011-03-01  Peter Rosin  <peda@lysator.liu.se>

	test defs: unindent without temporary file
	* tests/defs.in (commented_sed_unindent_prog): Commented Sed program
	that strips the "proper" amount of leading whitespace.
	(unindent): Lazily strip comments from the above program and use it
	to unindent without using a temporary file.

2011-02-26  Stefano Lattarini  <stefano.lattarini@gmail.com>

	libtool: suggest LT_INIT if LTLIBRARIES primary is used
	When the LTLIBRARIES primary was used, but $(LIBTOOL) wasn't
	defined, automake suggested to add a call to AC_PROG_LIBTOOL
	in configure.ac.  But that macro is deprecated since Libtool
	version 1.9b (2004-08-29), in favor of the newer LT_INIT.  So
	suggest the use of this latter macro instead.
	* lib/Automake/Variable.pm (%_am_macro_for_var): Pair 'LIBTOOL'
	with 'LT_INIT', not with 'AC_PROG_LIBTOOL'.
	* libtool4.test: Adjust and extend.  Also, add a call to macro