@@ -377,6 +377,7 @@ depend3.test \
 depend4.test \
 depend5.test \
 depend6.test \
+deprecated-acinit.test \
 destdir.test \
 dirforbid.test \
 dirlist.test \
