@@ -1,3 +1,11 @@
+2011-03-17  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: add test about deprecated use of AC_INIT
+	* tests/deprecated-acinit.test: New test, check that automake
+	and autoconf complain about an old-style AC_INIT call used with
+	a new-style AM_AUTOMAKE_INIT call.
+	* tests/Makefile.am (TESTS): Update.
+
 2011-03-04  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: fix bug (comments-in-var-defn.test + autoconf 2.62)
